--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
 
 jobs:
-  syntax-check:
+  syntax-and-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -16,6 +16,15 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install test dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install pandas
+
       - name: Compile source
         run: |
           python -m compileall src
+
+      - name: Run unit tests
+        run: |
+          python -m unittest discover -s tests -p 'test_*.py'
